Changed some colors, simplified the code, delted redundant CSS modifiers, fixed the footer somewhat. I also changed a few colors and improve the spacing in the footer and the whole page overall.
Copyright still needs to be fixed and the dreaded non-centering title in the Testimonials section still hasnt been fixed yet.

Next step is making this theme fully functional in IWP.

--- a/wp-content/themes/lava/lava-main-html/assets/css/style-test.css
+++ b/wp-content/themes/lava/lava-main-html/assets/css/style-test.css
@@ -36,8 +36,8 @@
     --raleway-font: 'Raleway', sans-serif;
     --section-color: rgb(186;  148;  224);
     --gold-color: rgb(255, 180, 0);
-    --orange-lingrad: linear-gradient(rgb(255, 8, 0), rgb(255, 166, 0));
-    --orange-lingrad-reverse: linear-gradient(rgb(255, 166, 0),rgb(255, 8, 0));
+    --orange-lingrad: linear-gradient(rgb(255, 8, 0), rgb(255, 185, 0));
+    --orange-lingrad-reverse: linear-gradient(rgb(255, 185, 0),rgb(255, 8, 0));
     --basalt: rgb(32, 37, 41);
     --bone: rgb(246, 246, 216);
     --bone-lingrad: linear-gradient(rgb(246, 246, 216),whitesmoke);
@@ -46,7 +46,8 @@
 /* GLOBALS */
 
 html {
-    height: auto;
+    margin: 0;
+    padding: 0;
     scroll-behavior: smooth;
 }
 
@@ -65,8 +66,7 @@ body {
     /* min-height: 100vh; */
     height: auto;
     max-width: 100vw;
-    margin-top: 11vh;
-    margin-bottom: -11vh;
+    /* margin-top: 11vh; */
     position: absolute;
     overflow-x: hidden;
 }
@@ -162,7 +162,7 @@ header h2 {
 header p {
     margin-top: 2em;
     font-size: 1.5em;
-    --header-text: orange;
+    color: var(--bone);
 }
 
 header img {
@@ -221,7 +221,8 @@ p {
 footer {
     background: var(--orange-lingrad-reverse);
     position: relative;
-    color: whitesmoke;
+    color: var(--bone);
+    /* font-weight: bold; */
     width: 100%;
     height: 100vh;
     margin-top: -50vh;
@@ -235,6 +236,15 @@ footer p {
     /* margin-top: 2em; */
     font-size: 16px;
 }
+
+#footer-container {
+    max-height: 80vh;
+}
+
+#footer-copyright {
+    float: right;
+}
+
 
 h1, h2, h3, h4, h5, h6 {
     margin: 0px;
@@ -279,9 +289,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #navigation a {
-    display: block;
+    display: inline-block;
+    font-size: 22px;
     text-decoration: none;
     color: orange;
+}
+
+.nav-items {
+    height: max-content;
 }
 
 
@@ -295,27 +310,6 @@ h1, h2, h3, h4, h5, h6 {
 #header-button:hover {
     background: rgb(150, 24, 7);
     color: orange;
-}
-
-#nav-items {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/* .nav-item {
-    display: block;
-    height:11vh;
-} */
-
-.nav-link {
-    font-size: 22px;
-    
-}
-
-.nav-link-tab {
-    height: auto;
-    width:fit-content;
 }
 
 .orange-bkg {
@@ -336,20 +330,12 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
 }
 
-#footer-container {
-    max-height: 300px;
-}
-
 .blurred {
     -webkit-filter: blur(4px); 
     -moz-filter:blur(4px); 
     -ms-filter:blur(4px); 
     -o-filter:blur(4px); 
     filter:blur(4px);
-}
-
-.footer-content {
-    padding-top: 5px;
 }
 
 /* Need to fix fqce image row */
@@ -382,12 +368,9 @@ h1, h2, h3, h4, h5, h6 {
     z-index: -1;
 }
 
-
-
 .img-col {
     height: 400px;
     width: 300px;
-    
 }
 
 #face1 {
@@ -434,14 +417,16 @@ input[type=text] {
 
 /* NEEDS TO BE ADJUSTED */
 
+
+
 .nav-item:hover {
-    height: 11vh;
     background-color: black;
+    border-radius: 5%;
 }
 
 @keyframes flicker {
     0% {
-        color: orange;
+        color: var(--gold-color);
     }
     
     25% {
@@ -457,7 +442,7 @@ input[type=text] {
     }
     
     90% {
-        color:rgb(255, 157, 0);
+        color:var(--gold-color);
     }
     
     100% {
